@@ -1,5 +1,11 @@
 2004-04-03  Jorn Baayen  <jbaayen@gnome.org>
 
+	* src/PlaylistWindow.cs:
+
+	Fix window visibility bug.
+
+2004-04-03  Jorn Baayen  <jbaayen@gnome.org>
+
 	* data/glade/PlaylistWindow.glade:
 	* src/NotificationAreaIcon.cs:
 	* src/PlaylistWindow.cs:
